--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=\\\\VBOXSVR\\Carpeta_compartida\\jcalendar-1.4.jar
+file.reference.kotlin-runtime.jar=C:\\Users\\elabu\\AppData\\Roaming\\NetBeans\\8.2\\kotlinc\\lib\\kotlin-runtime.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +48,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${kotlinc.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -61,6 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+kotlinc.classpath=${file.reference.kotlin-runtime.jar}
 main.class=proyecto.Proyecto
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -68,7 +71,8 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${kotlinc.classpath}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
